# create_menu_lcel

./: README.md  pyproject.toml
src/create_menu_lcel/: __init__.py  create_menu_lcel.py
